IntelliJ warning cleanup